test_files/syntax_errors/MethodMissingClosingBracket.java:Zone.Identifier
[ZoneTransfer]
ZoneId=3
ReferrerUrl=C:\Users\ahuss\Downloads\getting_started (1).zip
